--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,13 @@ h1,h2,h3,h4,h5,h6 {
 	height: 300px;
 }
 
-.container {
+.container1 {
+	max-width: 960px;
+	margin: auto;
+	background-color: white;
+}
+
+.container2 {
 	max-width: 960px;
 	margin: auto;
 	background-color: white;
@@ -63,11 +69,11 @@ a:hover {
 	background-image: url("../images/404img9.gif");
 	background-repeat: no-repeat;
 	background-size: cover;
-	width: 35%;
+	width: 60%;
 	height: 300px;
 	display: none;
 	margin: auto;
-	padding-bottom: 100px;
+	padding-bottom: 600px;
 }
 
 
