--- a/css/styles.css
+++ b/css/styles.css
@@ -7,20 +7,19 @@
  	height: 0;
 }
 
-h1,h2,h3,h4,h5,h6 {
-	margin: 0;
+#header404,#fix404 {
 	padding: 0;
-
+	margin: 0;
 }
 
-.text {
+.text404 {
 	float: left;
 	max-width: 60%;
 	margin-right: 40px;
 	padding-left: 20px;
 }
 
-.img {
+.img404 {
 	background-image: url("../images/404img7.gif");
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -29,53 +28,33 @@ h1,h2,h3,h4,h5,h6 {
 	height: 300px;
 }
 
-.container1 {
+.container404 {
 	max-width: 960px;
 	margin: auto;
 	background-color: white;
 }
 
-.container2 {
-	max-width: 960px;
-	margin: auto;
-	background-color: white;
-}
-
-p {
+.error404 {
 	font-size: 16px;
 }
 
-ul {
+#list404 {
 	padding: 0;
 }
 
-li {
+.listItem404 {
 	list-style: none;
-	
-
 }
 
-a {
+.link404 {
 	text-decoration: none;
 	color: black;
 }
 
-a:hover {
+.link404:hover {
 	text-decoration: underline;
 	font-weight: bold;
 }
-
-.hide {
-	background-image: url("../images/404img9.gif");
-	background-repeat: no-repeat;
-	background-size: cover;
-	width: 60%;
-	height: 300px;
-	display: none;
-	margin: auto;
-	padding-bottom: 600px;
-}
-
 
 
 
