--- a/css/styles.css
+++ b/css/styles.css
@@ -7,19 +7,14 @@
  	height: 0;
 }
 
-#header404,#fix404 {
-	padding: 0;
-	margin: 0;
-}
-
-.text404 {
+.error-text {
 	float: left;
 	max-width: 60%;
 	margin-right: 40px;
 	padding-left: 20px;
 }
 
-.img404 {
+.error-img {
 	background-image: url("../images/404img7.gif");
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -28,30 +23,30 @@
 	height: 300px;
 }
 
-.container404 {
+.error-container {
 	max-width: 960px;
 	margin: auto;
 	background-color: white;
 }
 
-.error404 {
+.error-message {
 	font-size: 16px;
 }
 
-#list404 {
+.error-list {
 	padding: 0;
 }
 
-.listItem404 {
+.error-listItem {
 	list-style: none;
 }
 
-.link404 {
+.error-link {
 	text-decoration: none;
 	color: black;
 }
 
-.link404:hover {
+.error-link:hover {
 	text-decoration: underline;
 	font-weight: bold;
 }
